Fixes scrollbar displaying with mouse detection on Macs.

--- a/app/assets/stylesheets/main_container/centerpiece.css
+++ b/app/assets/stylesheets/main_container/centerpiece.css
@@ -23,7 +23,7 @@ h3.project-codename {
 
 ul.task-items {
   max-height: 100%;
-  overflow: scroll;
+  overflow-y: auto;
 }
 
 ul.task-items > li {
